Closed
Bug 303729
Opened 20 years ago
Closed 19 years ago
trailing space in folder name are removed and folder not accessible anymore
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: denysmichel, Assigned: dev-null)
References
(Blocks 1 open bug)
Details
(Keywords: fixed1.8.1.3)
Attachments
(1 file)
|
2.81 KB,
patch
|
mscott
:
review+
Bienvenu
:
superreview+
mscott
:
approval-thunderbird2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; rv:1.7.6) Gecko/20050318 Firefox/1.0.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; rv:1.7.6) Gecko/20050318 Firefox/1.0.2
Mail folder with trailing space are recorded on disk with the space e.g.
test .sbd and are shown with the trailing space in Thunderbird. But when closing
and re-opening Thunderbird, it seems that Thunderbird remove the white space in
its list of folders, try to open the .sbd file, does not find one and create a
new one without the space e.g. test.sdb And the correct folder test .sbd is not
listed anymore. But it is still on disk. Workaround to get your folder back:
remove test.sbd and rename test .sbd to test.sbd
Reproducible: Always
Steps to Reproduce:
1.In local folder create a new folder named "test " (I.e test with a trailing
white space).
1.1 Highlight the newly created folder in the folder list : you will notice that
the space is still there.
2.Move an exiting mail into the new folder
3.Close and re-open Thunderbird
4."test " is not shown anymore and has been replaced by "test" which is empty.
5. Check the files on your disk: there are two "test .sdb" and "test.sdb"
Workaround: Delete the file "test.sdb" and rename "test .sdb" to "test.sdb"
| Assignee | ||
Comment 2•19 years ago
|
||
I confirmed this bug, except Step 2. is "Move an exiting folder", not "Move an exiting mail."
When creating file "test ", Windows actually creates "test".
It is same as Bug 229522 comment #28, " " instead of ".".
So, adding " " to patch of Bug 229522 fixes this bug.
Attachment #256796 -
Flags: superreview?(mscott)
Attachment #256796 -
Flags: review?(mscott)
Updated•19 years ago
|
Assignee: mscott → dev-null
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•19 years ago
|
Component: Mail Window Front End → MailNews: Backend
Product: Thunderbird → Core
Version: 1.0 → Trunk
| Assignee | ||
Updated•19 years ago
|
Flags: blocking-thunderbird2?
Comment 3•19 years ago
|
||
Comment on attachment 256796 [details] [diff] [review]
patch rv1
David would know better than I if this is the right thing to do as he was involved in Bug 229522.
Attachment #256796 -
Flags: superreview?(mscott) → superreview?(bienvenu)
Comment 4•19 years ago
|
||
Comment on attachment 256796 [details] [diff] [review]
patch rv1
If it's really Windows that is stripping off the trailing space, and not some Mozilla code, then yes, this is the right fix.
I've pretty much decided that the hashing thing we do for "illegal" folder names was a bad idea - we should have tried to hew as close as possible to the original folder name.
Attachment #256796 -
Flags: superreview?(bienvenu) → superreview+
Updated•19 years ago
|
Attachment #256796 -
Flags: review?(mscott)
Attachment #256796 -
Flags: review+
Attachment #256796 -
Flags: approval-thunderbird2+
Comment 5•19 years ago
|
||
not a blocker, but we're going to take the patch. thanks for the contribution!
Flags: blocking-thunderbird2? → blocking-thunderbird2-
Comment 6•19 years ago
|
||
Thanks for the patch! Fixed on the branch and the trunk.
Updated•19 years ago
|
Blocks: folders-with-special-characters
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•