Bug #303729 --> trailing space in folder names are removed and the folder is not accessible anymore. Patch by Atsushi Sakai <dev-null@hotmail.co.jp>. r=mscott, sr=bienvenu