mailnews/base/util/nsMsgUtils.cpp
@@ -85,7 +85,7 @@ static NS_DEFINE_CID(kCNntpUrlCID, NS_NNTPURL_CID);
 
 #define ILLEGAL_FOLDER_CHARS ";#"
 #define ILLEGAL_FOLDER_CHARS_AS_FIRST_LETTER "." 
-#define ILLEGAL_FOLDER_CHARS_AS_LAST_LETTER  ".~"
+#define ILLEGAL_FOLDER_CHARS_AS_LAST_LETTER  ".~ "
 
 #define NS_PASSWORDMANAGER_CATEGORY "passwordmanager"
 static PRBool gInitPasswordManager = PR_FALSE;
@@ -340,7 +340,7 @@ nsresult NS_MsgHashIfNecessary(nsCAutoString &name)
   // are too long or contain illegal characters
   PRInt32 illegalCharacterIndex = str.FindCharInSet(illegalChars);
 
-  // Need to check the first ('.') and last ('.' and '~') char
+  // Need to check the first ('.') and last ('.', '~' and ' ') char
   if (illegalCharacterIndex == kNotFound) 
   {
 	NS_NAMED_LITERAL_CSTRING (illegalFirstChars, ILLEGAL_FOLDER_CHARS_AS_FIRST_LETTER);
@@ -394,7 +394,7 @@ nsresult NS_MsgHashIfNecessary(nsAutoString &name)
   PRInt32 illegalCharacterIndex = name.FindCharInSet(
                                   FILE_PATH_SEPARATOR FILE_ILLEGAL_CHARACTERS ILLEGAL_FOLDER_CHARS);
 
-  // Need to check the first ('.') and last ('.' and '~') char
+  // Need to check the first ('.') and last ('.', '~' and ' ') char
   if (illegalCharacterIndex == kNotFound) 
   {
 	NS_NAMED_LITERAL_STRING (illegalFirstChars, ILLEGAL_FOLDER_CHARS_AS_FIRST_LETTER);
